--- a/Week6/Ex1/client/src/components/Post.css
+++ b/Week6/Ex1/client/src/components/Post.css
@@ -1,12 +1,13 @@
 .post{
     background-color: white;
-    max-width: 800px;
+    max-width: 1000px;
     border: 1px solid;
     margin-bottom: 45px;
 }
 
 .post_image{
-    width: 100px;
+    width: 500px;
+    height: 500px;
     object-fit: contain;
     border-top: 1px solid lightgray;
     border-bottom: 1px solid lightgray;
